test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_pass_1/src/main.nr

        fn main(i: u64) -> pub u64 {
            if i == 0 { 0 } else { i + main(i-1) }
        }
        